--- a/style.css
+++ b/style.css
@@ -28,12 +28,11 @@ body {
     padding: 20px;
 }
 
-.logo a {
-    font-size: 24px;
-    font-weight: bold;
-    color: var(--primary-color);
-    text-decoration: none;
+.logo .logo-img {
+    width: 150px;
+    height: auto;
 }
+
 
 .menu ul {
     list-style: none;
